Aggiunta struttura di base tramite scss

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>SASS First</title>
 </head>
 <body>
+
+    <main>
+
+        <div class="container">
+            <h1>La mia prima pagina Sass</h1>
+
+            <p>Questo è un placeholder, invece di mettere un banale "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam excepturi mollitia modi nesciunt provident corrupti consectetur consequuntur sapiente optio rerum odit dicta delectus officiis, praesentium consequatur magni sint ducimus earum!"</p>
+
+            <h2>Questi sotto sono due bottoni</h2>
+            <div class="mini_container">
+                <div class="button">Click</div>
+                <div class="button">Clack</div>
+            </div>
+        </div>
+
+    </main>
     
 </body>
 </html>
