--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <!-- /fontawesome -->
+
+    <!-- css -->
     <link rel="stylesheet" href="dist/app.css">
+    <!-- /css -->
+
     <title>SASS First</title>
 </head>
 <body>
@@ -17,10 +25,12 @@
             <p>Questo è un placeholder, invece di mettere un banale "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam excepturi mollitia modi nesciunt provident corrupti consectetur consequuntur sapiente optio rerum odit dicta delectus officiis, praesentium consequatur magni sint ducimus earum!"</p>
 
             <h2>Questi sotto sono due bottoni</h2>
+
             <div class="mini_container">
                 <div class="button">Click</div>
                 <div class="button">Clack</div>
             </div>
+
         </div>
 
     </main>
