--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
             <p>Questo è un placeholder, invece di mettere un banale "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam excepturi mollitia modi nesciunt provident corrupti consectetur consequuntur sapiente optio rerum odit dicta delectus officiis, praesentium consequatur magni sint ducimus earum!"</p>
 
-            <h2>Questi sotto sono due bottoni</h2>
+            <h2>
+                <i class="fas fa-arrow-down"></i> Questi sotto sono due bottoni 
+                <i class="fas fa-arrow-down"></i>
+            </h2>
 
             <div class="mini_container">
                 <div class="button">Click</div>
